<resources>
    <string name="app_name">PriceTrace</string>
    <string name="profile">Профиль</string>
    <string name="auth">Авторизация</string>
    <string name="categories">Категории</string>
    <string name="search">Поиск</string>
    <string name="product">Товар</string>
    <string name="list_product">Список товаров</string>
    <string name="product_img_description">[картинка товара]</string>
    <string name="add_to_cart">В корзину</string>
    <string name="search_error">Товары не найдены</string>
    <string name="search_success">Результаты поиска:</string>
    <string name="server_error_title">Ошибка сервера</string>
    <string name="server_error_message">Судя по всему, произошла какая-то ошибка на стороне сервиса. Повторите операцию позднее</string>
    <string name="network_error_title">Ошибка подключения</string>
    <string name="network_error_message">Подключитесь к сети и повторите операцию</string>
    <string name="ok">ОК</string>
    <string name="characteristics">Характеристики</string>
    <string name="description">Описание</string>
    <string name="title">Название</string>
    <string name="quit">Выйти</string>
    <string name="hello">Добро пожаловать!"</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="login">Вход</string>
    <string name="login_field">Логин</string>
    <string name="password_field">Пароль</string>
    <string name="no_data_title">Ошибка</string>
    <string name="no_data_message">Заполните все поля и повторите операцию</string>
    <string name="login_error_title">Ошибка входа</string>
    <string name="login_error_message">Проверьте корректность вводимых данных</string>
    <string name="cart">Корзина</string>
    <string name="email">Почта</string>
    <string name="reg">Регистрация</string>
    <string name="reg_error_title">Ошибка регистрации</string>
    <string name="password_field2">Повтор пароля</string>
    <string name="check_password_failed">Пароли не совпадают</string>
    <string name="cart_empty_title">Ошибка корзины</string>
    <string name="cart_empty_message">Кажется, ваша корзина пуста</string>
    <string name="remove_from_cart">Удалить</string>

</resources>